# OccupationalSafety

./: .env.example  .gitignore  Makefile  README.md  database.sql  events.py  main-main.py  main.py  pyproject.toml  user_data.db
.github/workflows/: lint-check.yml
config_data/: config.py
database/: database.py
handlers/: FSM.py  user_handlers.py  warning_handlers.py
keyboards/: main_menu.py
lexicon/: lexicon.py
tests/: default_state_test.py  test_handlers.py
