[tool.poetry]
name = "occupationalsafetybot"
version = "0.1.0"
description = "Telegram bot, created with a purpose to commit violations of Occupational Safety"
authors = ["Pavel94 <zhilinsky.pa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
aiogram = "^3.14.0"
environs = "^11.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
